side independent menus

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <title>GS</title>
     <style type="text/css">
+    	.pullmenu {
+    		padding: 0!important ;
+    	}
         /**
          * Example of an initial loading indicator.
          * It is recommended to keep this as minimal as possible to provide instant feedback
