--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     	.pullmenu {
     		padding: 0!important ;
     	}
+    	.bottom-menu {
+    		background-image: url(resources/images/bottom-menu) ;
+    		background-repeat: no-repeat ;
+    		background-size: 100% 100% ;
+    	}
         /**
          * Example of an initial loading indicator.
          * It is recommended to keep this as minimal as possible to provide instant feedback
