--- a/index.html
+++ b/index.html
@@ -6,11 +6,20 @@
     <style type="text/css">
     	.pullmenu {
     		padding: 0!important ;
+    		z-index:10!important;
+    	}
+    	.pullmenu#my-top-menu .x-body {
+    		background-color: black!important;
     	}
     	.bottom-menu {
-    		background-image: url(resources/images/bottom-menu) ;
+    		background-image: url(resources/images/bottom-menu.png) ;
     		background-repeat: no-repeat ;
     		background-size: 100% 100% ;
+    	}
+    	
+    	.menu-top {
+    		background-image: url(resources/images/top-menu.png) ;
+    		background-repeat: no-repeat ;
     	}
         /**
          * Example of an initial loading indicator.
