--- a/index.html
+++ b/index.html
@@ -21,6 +21,25 @@
     		background-image: url(resources/images/top-menu.png) ;
     		background-repeat: no-repeat ;
     	}
+    	.doc-button {
+    		background-image: url(resources/images/info.png)!important;
+    		background-repeat: no-repeat ;
+    		background-size: 100% 100% ;
+    		width: 30px ;
+    		height: 30px ;
+    		margin: 5px 5px 0 20px;
+    	}
+    	.ok-button {
+    		background-image: url(resources/images/ok.png)!important;
+    		background-repeat: no-repeat ;
+    		background-size: 100% 100% ;
+    		width: 30px ;
+    		height: 30px ;
+    		margin: 5px 0 5px 20px;
+    	}
+    	.saving {
+    		margin-top: 8px; 
+    	}
         /**
          * Example of an initial loading indicator.
          * It is recommended to keep this as minimal as possible to provide instant feedback
